--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script type='text/javascript' src='js/app.js'></script>
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol' async defer></script>
+    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol' async defer></script>
     <script type="text/javascript">
         var map, infobox, data;
         document.body.onload = function () {
